--- a/src/nodes/testTwo/testTwo.docs.html
+++ b/src/nodes/testTwo/testTwo.docs.html
@@ -8,7 +8,7 @@
     <dd>The configured payload of the message.</dd>
 
     <dt class="optional">topic <span class="property-type">string</span></dt>
-    <dd>An optional property some change</dd>
+    <dd>An optional property some change 3</dd>
 
 </dl>
 
